Wed Jan 18 15:12:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* read_passwd.c (des_read_password): Declare global_context and
		initialize it if necessary.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Nov  3 18:29:10 1994  Mark Eichin  (eichin@cygnus.com)

	* pcbc_encrypt.c: moved from f_pcbc.c in lib/crypto/des, and
	inlined proper des.h to avoid confusion in names.
	* Makefile.in: add -I to CFLAGS to get f_tables.h from
	lib/crypto/des as well.

Wed Oct 26 14:23:36 1994    (tytso@rsx-11)

	* Makefile.in (check): 
	* verify.c (main): Add verification checks to the test suite.

Wed Oct 19 12:16:13 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: make install obey $(DESTDIR) completely

Mon Oct  3 22:48:14 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: make install obey $(DESTDIR)

Thu Aug  4 03:40:55 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: oops look for install program

	* Makefile.in: make install fixes
