@@ -22,8 +22,18 @@
 #include <krb5/osconf.h>
 
 #ifndef KRB_INT32
+#if (SIZEOF_LONG == 4)
 #define KRB_INT32 long
+#elif (SIZEOF_INT == 4)
+#define KRB_INT32 int
+#elif (SIZEOF_SHORT == 4)
+#define KRB_INT32 short
+#else
+  ?== No 32 bit type available
 #endif
+#endif /* !KRB_INT32 */
+
+	
 #ifndef KRB_UINT32
 #define KRB_UINT32 unsigned KRB_INT32
 #endif
